Agregando gente prueba

--- a/pruebaAudios.html
+++ b/pruebaAudios.html
@@ -150,11 +150,30 @@
     <div class="container" id="mainContent" style="display: none;">
         <h2 class="section-title">Sueños de Viewers</h2>
         <div class="user-container">
+            
             <div class="user-card viewer">
                 <h3>daantesiito</h3>
                 <p class="user-type">Viewer</p>
                 <audio controls>
                     <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/audio1.ogg" type="audio/mpeg">
+                    Tu navegador no admite el elemento de audio.
+                </audio>
+            </div>
+
+            <div class="user-card viewer">
+                <h3>JulianPz7</h3>
+                <p class="user-type">Viewer</p>
+                <audio controls>
+                    <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/Julianpz7_viewer_1717730897461.wav" type="audio/mpeg">
+                    Tu navegador no admite el elemento de audio.
+                </audio>
+            </div>
+            
+            <div class="user-card viewer">
+                <h3>ANONIMO</h3>
+                <p class="user-type">Viewer</p>
+                <audio controls>
+                    <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/ANONIMO TENEDOR 1_viewer_1717729795159.wav" type="audio/mpeg">
                     Tu navegador no admite el elemento de audio.
                 </audio>
             </div>
@@ -205,7 +224,7 @@
             </div>
 
             <div class="user-card sub">
-                <h3>JulianPz7</h3>
+                <h3>hola123</h3>
                 <p class="user-type">Sub</p>
                 <audio controls>
                     <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/usuariorandom_sub_1717724816630.wav" type="audio/mpeg">
