Agregando link de twitch a escucharAudios

--- a/escucharAudios.html
+++ b/escucharAudios.html
@@ -44,6 +44,20 @@
             animation: fadeIn 1.5s ease-in-out;
         }
 
+        .container h2 {
+            color: #6441a5;
+            border: 2px solid #6441a5;
+            border-radius: 10px;
+            width: 42%;
+            position: center;
+            margin-left: 330px;
+        }
+        
+        .container h2 a {
+            color: inherit; /* Esto hará que el enlace use el color de su elemento padre */
+            text-decoration: none; /* Opcional: elimina el subrayado de los enlaces */
+        }
+
         /* Título de la sección */
         .section-title {
             font-size: 36px;
@@ -268,7 +282,10 @@
     </div>
 
     <div class="container" id="mainContent" style="display: none;">
-        <h2 class="section-title">ANECDOTAS CON PROFESORES</h2>
+        <h2 class="section-title">
+            <a href="https://twitch.tv/xmarigonzalezx">twitch.tv/xMariGonzalezx</a>
+        </h2>
+        <h1 class="section-title">ANECDOTAS CON PROFESORES</h1>
         <div class="user-container">
             
             <div class="user-card viewer">
