--- a/escucharAudios.html
+++ b/escucharAudios.html
@@ -302,6 +302,15 @@
         </h2>
         <h1 class="section-title">ANECDOTAS CON PROFESORES</h1>
         <div class="user-container">
+
+            <div class="user-card vip">
+                <h3>GORDO</h3>
+                <p class="user-type">Vip</p>
+                <audio controls>
+                    <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/GORDO_vip_1717833219155.wav" type="audio/mpeg">
+                    Tu navegador no admite el elemento de audio.
+                </audio>
+            </div>
             
             <div class="user-card viewer">
                 <h3>daantesiito</h3>
