cambiando direccion de gif audios.html

--- a/audios.html
+++ b/audios.html
@@ -18,7 +18,7 @@
         }
 
         body {
-            background: url('https://github.com/daantesiito/daantesiito.github.io/blob/b92de913f00e2d3ddbca14ddb1d4ef31316d1ee3/images/MinecraftFondo.gifhttps://github.com/daantesiito/daantesiito.github.io/blob/main/images/MinecraftFondo.gif?raw=true') no-repeat center center fixed; /* Ajusta la ruta a tu archivo .gif */
+            background: url('https://github.com/daantesiito/daantesiito.github.io/blob/main/images/MinecraftFondo.gif?raw=true') no-repeat center center fixed; /* Ajusta la ruta a tu archivo .gif */
             background-size: cover;
             color: #999;
             font-family: 'Level Up Level Up', sans-serif;
