Agregando gente de prueba en escucharAudios

--- a/escucharAudios.html
+++ b/escucharAudios.html
@@ -389,6 +389,50 @@
                 </audio>
                 <button onclick="showImages(['https://github.com/daantesiito/daantesiito.github.io/blob/main/images/desafioalpasto/5.jpeg?raw=true', 'https://github.com/daantesiito/daantesiito.github.io/blob/main/images/desafioalpasto/1.jpg?raw=true'])">FOTOS</button>
             </div>
+
+            <div class="user-card color2">
+                <h3>NACHOVICH</h3>
+                <audio controls>
+                    <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/audio2.ogg" type="audio/mpeg">
+                    Tu navegador no admite el elemento de audio.
+                </audio>
+                <button onclick="showImages(['https://github.com/daantesiito/daantesiito.github.io/blob/main/images/desafioalpasto/5.jpeg?raw=true', 'https://github.com/daantesiito/daantesiito.github.io/blob/main/images/desafioalpasto/1.jpg?raw=true'])">FOTOS</button>
+            </div>
+
+            <div class="user-card color1">
+                <h3>MIACHAD</h3>
+                <audio controls>
+                    <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/audio2.ogg" type="audio/mpeg">
+                    Tu navegador no admite el elemento de audio.
+                </audio>
+            </div>
+
+            <div class="user-card color2">
+                <h3>BRANDON</h3>
+                <audio controls>
+                    <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/audio2.ogg" type="audio/mpeg">
+                    Tu navegador no admite el elemento de audio.
+                </audio>
+                <button onclick="showImages(['https://github.com/daantesiito/daantesiito.github.io/blob/main/images/desafioalpasto/5.jpeg?raw=true', 'https://github.com/daantesiito/daantesiito.github.io/blob/main/images/desafioalpasto/1.jpg?raw=true'])">FOTOS</button>
+            </div>
+
+            <div class="user-card color3">
+                <h3>GONZUWU</h3>
+                <audio controls>
+                    <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/audio2.ogg" type="audio/mpeg">
+                    Tu navegador no admite el elemento de audio.
+                </audio>
+            </div>
+
+            <div class="user-card color2">
+                <h3>MILA</h3>
+                <audio controls>
+                    <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/audio2.ogg" type="audio/mpeg">
+                    Tu navegador no admite el elemento de audio.
+                </audio>
+                <button onclick="showImages(['https://github.com/daantesiito/daantesiito.github.io/blob/main/images/desafioalpasto/5.jpeg?raw=true', 'https://github.com/daantesiito/daantesiito.github.io/blob/main/images/desafioalpasto/1.jpg?raw=true'])">FOTOS</button>
+            </div>
+
         </div>
     </div>
 
