agregando texto del elegir imagen

--- a/audios.html
+++ b/audios.html
@@ -183,6 +183,10 @@
         <h3>MI PRIMER BESO</h3>
     </div>
 
+    <div>
+        <h4>El boton "ELEGIR IMAGEN" sirve para adjuntar imagenes relacionadas a la historia.</h4>
+    </div>
+
     <!-- Formulario para la grabación de audio -->
     <form id="uploadForm">
         <input type="text" id="username" placeholder="Username" required>
@@ -211,6 +215,9 @@
         <div>
             <h5>Pone "ANONIMO" + "PALABRA CLAVE" + "NUMERO DE AUDIO" que haga referencia a tu audio.</h5>
         </div>
+
+        
+
     </div>
 
     <!-- Formulario para la carga de imágenes -->
