Agregando gente a escuchar audios

--- a/escucharAudios.html
+++ b/escucharAudios.html
@@ -339,27 +339,25 @@
         <h1 class="section-title">ANECDOTAS CON PROFESORES</h1>
         <div class="user-container">
             <div class="user-card color1">
-                <h3>GORDO</h3>
+                <h3>Tadermoo</h3>
                 <audio controls>
-                    <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/GORDO_vip_1717833219155.wav" type="audio/mpeg">
+                    <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/Tadermoo_1718840802029.wav" type="audio/mpeg">
                     Tu navegador no admite el elemento de audio.
                 </audio>
-                <button onclick="showImages(['https://github.com/daantesiito/daantesiito.github.io/blob/main/images/My%20Projects/10milJuegoSS.png?raw=true', 'https://github.com/daantesiito/daantesiito.github.io/blob/main/images/desafioalpasto/5.jpeg?raw=true'])">FOTOS</button>
             </div>
             
             <div class="user-card color2">
-                <h3>daantesiito</h3>
+                <h3>roman_escu</h3>
                 <audio controls>
-                    <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/audio1.ogg" type="audio/mpeg">
+                    <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/roman_escu_1718840620071.wav" type="audio/mpeg">
                     Tu navegador no admite el elemento de audio.
                 </audio>
-                <button onclick="showImages(['https://github.com/daantesiito/daantesiito.github.io/blob/main/images/desafioalpasto/3.jpg?raw=true'])">FOTOS</button>
             </div>
 
             <div class="user-card color3">
-                <h3>JulianPz7</h3>
+                <h3>Pugliaa</h3>
                 <audio controls>
-                    <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/Julianpz7_viewer_1717730897461.wav" type="audio/mpeg">
+                    <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/Pugliaa_1718826207731.wav" type="audio/mpeg">
                     Tu navegador no admite el elemento de audio.
                 </audio>
             </div>
@@ -367,63 +365,61 @@
             <div class="user-card color4">
                 <h3>ANONIMO</h3>
                 <audio controls>
-                    <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/ANONIMO TENEDOR 1_viewer_1717729795159.wav" type="audio/mpeg">
+                    <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/ANÓNIMO _1718826105209.wav" type="audio/mpeg">
                     Tu navegador no admite el elemento de audio.
                 </audio>
-                <button onclick="showImages(['https://github.com/daantesiito/daantesiito.github.io/blob/main/images/desafioalpasto/2.jpg?raw=true', 'https://github.com/daantesiito/daantesiito.github.io/blob/main/images/desafioalpasto/5.jpeg?raw=true'])">FOTOS</button>
             </div>
 
             <div class="user-card color1">
-                <h3>ANONIMO</h3>
+                <h3>Nico olmedo</h3>
                 <audio controls>
-                    <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/ANONIMO hola_viewer_1717725497802.wav" type="audio/mpeg">
+                    <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/Nico olmedo_1718843997215.wav" type="audio/mpeg">
                     Tu navegador no admite el elemento de audio.
                 </audio>
             </div>
             
             <div class="user-card color2">
-                <h3>Mari</h3>
+                <h3>Lewy (lebui)</h3>
                 <audio controls>
-                    <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/audio2.ogg" type="audio/mpeg">
+                    <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/Lewy (se lee lebui)_1718833663029.wav" type="audio/mpeg">
                     Tu navegador no admite el elemento de audio.
                 </audio>
-                <button onclick="showImages(['https://github.com/daantesiito/daantesiito.github.io/blob/main/images/desafioalpasto/5.jpeg?raw=true', 'https://github.com/daantesiito/daantesiito.github.io/blob/main/images/desafioalpasto/1.jpg?raw=true'])">FOTOS</button>
             </div>
 
             <div class="user-card color2">
-                <h3>NACHOVICH</h3>
+                <h3>José Pablo</h3>
                 <audio controls>
-                    <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/audio2.ogg" type="audio/mpeg">
+                    <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/José Pablo _1718848061268.wav" type="audio/mpeg">
                     Tu navegador no admite el elemento de audio.
                 </audio>
-                <button onclick="showImages(['https://github.com/daantesiito/daantesiito.github.io/blob/main/images/desafioalpasto/5.jpeg?raw=true', 'https://github.com/daantesiito/daantesiito.github.io/blob/main/images/desafioalpasto/1.jpg?raw=true'])">FOTOS</button>
             </div>
 
             <div class="user-card color1">
-                <h3>MIACHAD</h3>
+                <h3>Comechingones1234</h3>
                 <audio controls>
-                    <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/audio2.ogg" type="audio/mpeg">
+                    <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/Comechingones1234_1718828101199.wav" type="audio/mpeg">
+                    Tu navegador no admite el elemento de audio.
+                    <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/Comechingones1234audio2_1718828210892.wav" type="audio/mpeg">
+                    Tu navegador no admite el elemento de audio.
+                </audio>
+            </div>
+
+            <div class="user-card color1">
+                <h3>Comechingones1234  Audio 2</h3>
+                <audio controls>
+                    <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/Comechingones1234audio2_1718828210892.wav" type="audio/mpeg">
                     Tu navegador no admite el elemento de audio.
                 </audio>
             </div>
 
             <div class="user-card color2">
-                <h3>BRANDON</h3>
+                <h3>Arian</h3>
                 <audio controls>
-                    <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/audio2.ogg" type="audio/mpeg">
-                    Tu navegador no admite el elemento de audio.
-                </audio>
-                <button onclick="showImages(['https://github.com/daantesiito/daantesiito.github.io/blob/main/images/desafioalpasto/5.jpeg?raw=true', 'https://github.com/daantesiito/daantesiito.github.io/blob/main/images/desafioalpasto/1.jpg?raw=true'])">FOTOS</button>
-            </div>
-
-            <div class="user-card color3">
-                <h3>GONZUWU</h3>
-                <audio controls>
-                    <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/audio2.ogg" type="audio/mpeg">
+                    <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/Arian_1718836478921.wav" type="audio/mpeg">
                     Tu navegador no admite el elemento de audio.
                 </audio>
             </div>
-
+            <!--
             <div class="user-card color2">
                 <h3>MILA</h3>
                 <audio controls>
@@ -432,7 +428,7 @@
                 </audio>
                 <button onclick="showImages(['https://github.com/daantesiito/daantesiito.github.io/blob/main/images/desafioalpasto/5.jpeg?raw=true', 'https://github.com/daantesiito/daantesiito.github.io/blob/main/images/desafioalpasto/1.jpg?raw=true'])">FOTOS</button>
             </div>
-
+            -->
         </div>
     </div>
 
