--- a/escucharAudios.html
+++ b/escucharAudios.html
@@ -336,7 +336,7 @@
         <h2 class="section-title">
             <a href="https://twitch.tv/xmarigonzalezx">twitch.tv/xMariGonzalezx</a>
         </h2>
-        <h1 class="section-title">ANECDOTAS CON PROFESORES</h1>
+        <h1 class="section-title">MI PRIMER BESO</h1>
         <div class="user-container">
             <div class="user-card color1">
                 <h3>Tadermoo</h3>
@@ -386,7 +386,7 @@
                 </audio>
             </div>
 
-            <div class="user-card color2">
+            <div class="user-card color3">
                 <h3>José Pablo</h3>
                 <audio controls>
                     <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/José Pablo _1718848061268.wav" type="audio/mpeg">
@@ -399,12 +399,10 @@
                 <audio controls>
                     <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/Comechingones1234_1718828101199.wav" type="audio/mpeg">
                     Tu navegador no admite el elemento de audio.
-                    <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/Comechingones1234audio2_1718828210892.wav" type="audio/mpeg">
-                    Tu navegador no admite el elemento de audio.
                 </audio>
             </div>
 
-            <div class="user-card color1">
+            <div class="user-card color4">
                 <h3>Comechingones1234  Audio 2</h3>
                 <audio controls>
                     <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/Comechingones1234audio2_1718828210892.wav" type="audio/mpeg">
@@ -416,6 +414,30 @@
                 <h3>Arian</h3>
                 <audio controls>
                     <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/Arian_1718836478921.wav" type="audio/mpeg">
+                    Tu navegador no admite el elemento de audio.
+                </audio>
+            </div>
+
+            <div class="user-card color3">
+                <h3>ANONIMO</h3>
+                <audio controls>
+                    <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/ANONIMO_1718862733224.wav" type="audio/mpeg">
+                    Tu navegador no admite el elemento de audio.
+                </audio>
+            </div>
+
+            <div class="user-card color2">
+                <h3>Cup-xon</h3>
+                <audio controls>
+                    <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/Cup-xon_1718869977101.wav" type="audio/mpeg">
+                    Tu navegador no admite el elemento de audio.
+                </audio>
+            </div>
+
+            <div class="user-card color4">
+                <h3>sharif</h3>
+                <audio controls>
+                    <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/sharif_1718910759421.wav" type="audio/mpeg">
                     Tu navegador no admite el elemento de audio.
                 </audio>
             </div>
