--- a/escucharAudios.html
+++ b/escucharAudios.html
@@ -441,6 +441,38 @@
                     Tu navegador no admite el elemento de audio.
                 </audio>
             </div>
+
+            <div class="user-card color1">
+                <h3>ANONIMO</h3>
+                <audio controls>
+                    <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/2024-06-20 17-31-39.mp3" type="audio/mpeg">
+                    Tu navegador no admite el elemento de audio.
+                </audio>
+            </div>
+
+            <div class="user-card color3">
+                <h3>ANONIMO</h3>
+                <audio controls>
+                    <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/2024-06-20 17-28-55.mp3" type="audio/mpeg">
+                    Tu navegador no admite el elemento de audio.
+                </audio>
+            </div>
+
+            <div class="user-card color4">
+                <h3>ANONIMO</h3>
+                <audio controls>
+                    <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/2024-06-20 17-28-08.mp3" type="audio/mpeg">
+                    Tu navegador no admite el elemento de audio.
+                </audio>
+            </div>
+
+            <div class="user-card color2">
+                <h3>ANONIMO</h3>
+                <audio controls>
+                    <source src="https://github.com/daantesiito/daantesiito.github.io/raw/main/audios/2024-06-20 17-26-04.mp3" type="audio/mpeg">
+                    Tu navegador no admite el elemento de audio.
+                </audio>
+            </div>
             <!--
             <div class="user-card color2">
                 <h3>MILA</h3>
