Agregando projecto de 100 Streamers Dicen

--- a/index.html
+++ b/index.html
@@ -159,6 +159,17 @@
 							</a>
 						</div>
 					</div>
+					<div class="col-md-4 col-xs-6 wow fadeIn" data-wow-delay="0.6s">
+						<div class="portfolio-thumb">
+							<a href="">
+								<img src="https://github.com/daantesiito/daantesiito.github.io/blob/main/images/My%20Projects/100StreamersDicen.jpg?raw=true" class="img-responsive" alt="portfolio img">
+								<div class="portfolio-overlay">
+									<h4>100 Streamers Dicen</h4>
+									<h5>Dinamica para hacer en directo conectado con el chat de twitch</h5>
+								</div>
+							</a>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
